// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> check how renders should render with <LoadingOverlay /> 1`] = `
<DocumentFragment>
  .c0 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
  border-color: #67809F;
  color: #67809F;
  cursor: not-allowed;
}

.c0:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c0:hover {
  border-color: #67809F;
  color: #67809F;
}

.c2 {
  display: inline-block;
  position: relative;
  width: 2.5rem;
  height: 2.5rem;
}

.c2 > div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  border-radius: 50%;
  -webkit-animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  animation: rotate 1.2s cubic-bezier(0.5,0,0.5,1) infinite;
  width: 2.5rem;
  height: 2.5rem;
  border: 0.3rem solid #1E8BC3;
  border-color: #1E8BC3 transparent transparent transparent;
}

.c2 > div:nth-child(1) {
  -webkit-animation-delay: -0.45s;
  animation-delay: -0.45s;
}

.c2 > div:nth-child(2) {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.c2 > div:nth-child(3) {
  -webkit-animation-delay: -0.15s;
  animation-delay: -0.15s;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FAFAFA88;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 10;
}

<button
    class="c0"
    color="blue"
    disabled=""
    type="button"
  >
    Test button
    <div
      class="c1"
      data-testid="LoadingOverlay"
    >
      <div
        class="c2"
        data-testid="Loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<Button /> check how renders should render without <LoadingOverlay /> 1`] = `
<DocumentFragment>
  .c0 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c0:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

<button
    class="c0"
    color="blue"
    type="button"
  >
    Test button
  </button>
</DocumentFragment>
`;
